styles/_project.scss
/**
 * Project specific styling.
 */



// HEADER styles
.results-header{
    text-align: center;
    max-width: 900px;

   h1 {
    padding-top: 0.3em;
  }

   h5 {
    text-transform: uppercase;
    font-size: .9em;
    letter-spacing: .08em;
    padding-top: 40px;
  }


// NAV default styles

  nav ul{
    width: 100%;
    display: block;
    text-align: center;
    margin: 40px auto 40px auto;
  }

  nav ul li.main-nav{
    background-color: white;
    text-transform: uppercase;
    font-size: 0.75em;
    font-family: 'Benton Sans';
    border: 1px solid #080808;
    border-radius: 6px;
    padding: 5px 10px 4px 10px;
    margin-right: 12px;
    min-width: 15%;
    position: relative;
  }

  nav ul li span{
    padding-left: 5px;
  }

  nav ul li img{
    width: 18px;
    -webkit-transition: 0.3s ease-out;
    -moz-transition:  0.3s ease-out;
    transition:  0.3s ease-out;
  }

  nav ul li:last-child {
    margin-right: 0;
  }

  nav ul li a, nav ul li a:link, nav ul li a:visited{
    color: #080808;
  }

  nav ul li.main-nav ul.nav-dropdown li{
    border:none;
    display: block;
    text-align: left;
    font-size: .95em;
    letter-spacing: .05em;
    padding: 8px 10px;
    margin: 0px;
  }

  nav ul li.main-nav ul.nav-dropdown{
    position: absolute;
    z-index: 1;
    left:0;
    background-color: #f5f5f5;
    border: 1px solid #666;
    border-radius: 0px 0px 6px 6px;
    border-top: 0px;
    margin: 5px 0px;
    visibility:hidden;
    opacity:0;
    filter:alpha(opacity=0);
    -webkit-transition:300ms ease;
    -moz-transition:300ms ease;
    -o-transition:300ms ease;
    transition:300ms ease;
    }

  nav.visible-phone{
    position: relative;
    font-family: 'Benton Sans';
    min-width: 50%;
    max-width: 80%;
    margin: auto;
    cursor: pointer;
  }

  nav select option{
    text-transform: uppercase;
    font-style: bold;
  }

  nav select option.sub{
    text-indent: 3em;
    font-style: none;
  }

  #drop-nav{
    display: none;
  }


// NAV hover states

  nav ul li:hover{
   color: #666;
   border: 1px solid #666;
   cursor: pointer;
 }

  nav ul li a:hover{
   color: #666;
 }

  nav ul li a:hover{
    background-color: eee;
  }

  nav ul li:hover img{
    -webkit-transform: rotateZ(90deg);
    -moz-transform: rotateZ(90deg);
    transform: rotateZ(90deg);
  }

  nav ul li:hover ul.nav-dropdown{
    //display: block;
    visibility:visible;
    opacity:1;
    filter:alpha(opacity=100);
  }



}


// RESULTS mainframe
.results{
  max-width: 975px;

  .lead-in{
    max-width: 525px;
    margin: auto;
    text-transform: none;
    font-family: 'Benton Sans';
    font-size: 1em;
    padding: 40px 0px;
  }

  .lead-in span{
    font-weight: bold;
  }

  h3{
    font-weight: bold;
    font-size: 1.4em;
  }

  h4{
    font-size: 1.1em;
    font-weight: bold;
  }

  h6{
    font-size: 1.1em;
    font-weight: normal;
  }

  .prim-chat p{
    font-family: 'Benton Sans';
    font-size: .9em;
  }

  .race-group .race-party:nth-child(odd){
    margin-left:8%;
  }

  .race-party{
    width: 46%;
    float: left;
    margin-bottom: 40px;
  }

  .race-group, .race{
    clear: both;
    margin-bottom: 100px;
  }


  .race-party-table{
    min-height: 225px;
  }

  .race-party table{
    margin-bottom: .5em;
  }

  .race-party thead tr th{
    font-size: .6em;
    text-transform: uppercase;
    color: #080808;
    font-weight: normal;
    border-bottom: 3px solid #EEEEEE;
    padding-left: 0px;
    padding-bottom: .2em;
  }

  .race-party tbody td{
    font-size: .9em;
    border-bottom: 1px solid #EEEEEE;
    vertical-align: middle;
  }

  th.winner{
    visibility:hidden;
  }

  td.winner{
   min-width: 17px;
   padding: .5em .2em .5em .5em;
   font-size: .8em;
  }

  .cand{
    padding-left: 0px;
  }

  .cand .inc{
    font-size: .8em;
    padding-left: 5px;
  }

  .votes, .pct{
    text-align: right;
  }

  .bar{
    width: 25%;
  }

  .bar .pctBar{
    display: block;
    height: 5px;
    border-radius: 2px;
    min-width: 2px;
    background-color: black;
  }

  .reporting{
    font-size: .65em;
    color: #808080;
    font-style: italic;
    margin-bottom: 2em;
  }

  .race-party .mapcanvas span{
    width: 100%;
    height: 400px;
    margin: auto;
    background-color: #eee;
    display: block;
  }


  // MAP styles

.counties {
  fill: #DCDCDC;
  stroke: white;
  stroke-width: 1px;
  stroke-linejoin: round;
  stroke-linecap: round;
}



  //RACE STYLE EXCEPTIONS

    //Uncontested

  .uncontested th.votes, .uncontested th.pct{
    visibility: hidden;
  }

  .uncontested .bar .pctBar{
    min-width: 0px;
  }

  .uncontested tr td{
    background-color: #eee;
  }



}


// MOBILE BREAKPOINT STYLES

@media (max-width: 900px){
  .bar{
    display:none;
  }
}

@media (max-width: 768px){
  .results .race-party{
    float: none;
    width: 90%;
    margin: auto;
  }

  .results .race-group .race-party:nth-child(odd){
    margin: auto;
  }
}

@media (max-width: 545px){
  nav#button-nav{
    display: none;
  }

  .results-header #drop-nav{
    display: block;
  }
}

